# markspace

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  LICENSE-CC-BY-4.0  LICENSE-MIT  README.md  pyproject.toml  review.md
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: publish.yml
docs/: framework.md  spec.md
experiments/: guide.md
experiments/comparison/: analysis.md  analyze.py  design.md  run_markspace.py  run_messagepassing.py  verify_agentframework.py
experiments/comparison/results/markspace/: seed_42.jsonl  seed_42_messages.jsonl  seed_43.jsonl  seed_43_messages.jsonl  seed_44.jsonl  seed_44_messages.jsonl  seed_45.jsonl  seed_45_messages.jsonl  seed_46.jsonl  seed_46_messages.jsonl  seed_47.jsonl  seed_47_messages.jsonl  seed_48.jsonl  seed_48_messages.jsonl  seed_49.jsonl  seed_49_messages.jsonl  seed_50.jsonl  seed_50_messages.jsonl  seed_51.jsonl  seed_51_messages.jsonl
experiments/comparison/results/messagepassing/: seed_42.jsonl  seed_42_messages.jsonl  seed_43.jsonl  seed_43_messages.jsonl  seed_44.jsonl  seed_44_messages.jsonl  seed_45.jsonl  seed_45_messages.jsonl  seed_46.jsonl  seed_46_messages.jsonl  seed_47.jsonl  seed_47_messages.jsonl  seed_48.jsonl  seed_48_messages.jsonl  seed_49.jsonl  seed_49_messages.jsonl  seed_50.jsonl  seed_50_messages.jsonl  seed_51.jsonl  seed_51_messages.jsonl
experiments/composition_stress/: analysis.md  run.py  verify_analysis.py
experiments/stress_test/: analysis.md  analyze.py  animate.py  design.md  plot_final.py  run.py  scenario.py  verify_analysis.py
experiments/stress_test/results/: agents.jsonl  rounds.jsonl  steps.jsonl  trial.jsonl
experiments/trials/: analysis.md  analyze_trials.py  animate.py  orchestrate.py  verify_analysis.py
experiments/trials/results/adversarial/: analysis.md  probe_mercury2_rejection.py  probe_mercury2_results.jsonl  verify_analysis.py
experiments/trials/results/adversarial/gpt-oss-120b/confidence/: agents.jsonl  (+5 more)
experiments/trials/results/defense/: analysis.md  verify_analysis.py
experiments/trials/results/multi_trial/: analysis.md  verify_analysis.py
experiments/validation/: analysis.md  analyze.py  analyze_pilot.py  design.md  multi-phase_design.md  results_block_self_rebook_20260228_011035.jsonl  results_exhaustion_5round_20260228_011047.jsonl  results_large_calendar_20260228_011042.jsonl  results_mercury2_conc.jsonl  results_mercury2_seq.jsonl  results_multi_phase_20260228_000031.jsonl  results_multi_phase_20260228_002622.jsonl  results_multi_phase_20260228_002718.jsonl  results_multi_phase_20260228_003006.jsonl  results_multi_phase_concurrent_20260228_005619.jsonl  results_phase2b_20260227.jsonl  results_phase3_20260227.jsonl  results_pilot_20260227.jsonl  results_test_30slots_20260228_010414.jsonl  results_test_5rounds_20260228_010721.jsonl  results_test_block_rebook_20260228_005941.jsonl  run.py  verify_analysis.py
markspace/: __init__.py  barrier.py  budget.py  compose.py  core.py  envelope.py  guard.py  llm.py  models.py  probe.py  rate_limit.py  schedule.py  space.py  telemetry.py
tests/: conftest.py  test_barrier.py  test_budget.py  test_composition.py  test_concurrent.py  test_defense_integration.py  test_envelope.py  test_guard.py  test_hypothesis.py  test_probe.py  test_properties.py  test_rate_limit.py  test_scenarios.py  test_schedule.py  test_telemetry.py
(+147 files in other folders)
