[project]
name = "markspace"
version = "0.1.3-beta"
description = "Environment-mediated coordination protocol for LLM agent fleets"
license = "MIT AND CC-BY-4.0"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["agents", "coordination", "stigmergy", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.24,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/opinionated-systems/markspace"
Repository = "https://github.com/opinionated-systems/markspace"
Issues = "https://github.com/opinionated-systems/markspace/issues"
Documentation = "https://github.com/opinionated-systems/markspace/tree/main/docs"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]
experiments = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markspace"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["markspace", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]
